# websockets-notifications-py

./: Dockerfile  Makefile  README.md  compose.yml  dev-requirements.txt  env.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md
src/: conftest.py  entrypoint.py
src/a12n/: fixtures.py  jwk_client.py  jwt_decode.py  types.py
src/a12n/tests/: tests_jwt_decode.py
src/a12n/tests/async_jwk_client/: conftest.py  tests_async_jwk_common.py  tests_async_jwk_decode.py  tests_async_jwk_fetch_data.py  tests_async_jwk_get_jwk_set.py  tests_async_jwk_get_signing_key_from_jwt.py
src/app/: fixtures.py  services.py  testing.py  types.py
src/app/conf/: __init__.py  settings.py
src/consumer/: __init__.py  consumer.py  dto.py
src/consumer/tests/: conftest.py  tests_consumer.py  tests_consumer_on_message.py
src/handlers/: __init__.py  dto.py  exceptions.py  message_handler.py  messages_handler.py  session_expiration_checker.py  websocket_auth_message_handler.py  websockets_access_guardian.py  websockets_handler.py
src/handlers/tests/: conftest.py  tests_auth_message_handler.py  tests_session_expiration_checker.py  tests_websockets_access_guardian.py
src/handlers/tests/message_handler/: conftest.py  tests_auth_message_handler.py  tests_message_handler_common.py  tests_subscirbe_message_handler.py  tests_unsubscirbe_message_handler.py
src/handlers/tests/messages_handler/: conftest.py  tests_auth_message_handler.py  tests_message_handler_common.py  tests_subscirbe_message_handler.py  tests_unsubscirbe_message_handler.py
src/storage/: __init__.py  exceptions.py  fixtures.py  subscription_storage.py  types.py
src/storage/storage_updaters/: __init__.py  storage_connection_register.py  storage_connection_remover.py  storage_user_subscriber.py  storage_user_unsubscriber.py  storage_websocket_register.py  storage_websocket_remover.py
src/storage/tests/: conftest.py
src/storage/tests/storage_updaters/: conftest.py  tests_storage_connection_register.py  tests_storage_connection_remover.py  tests_storage_user_subscriber.py  tests_storage_user_unsubscriber.py  tests_storage_websocket_register.py  tests_storage_websocket_remover.py
src/tests/functional/: conftest.py  tests_authentication.py  tests_broadcast_consumed_message.py  tests_remove_registered_on_token_expiration.py  tests_subscribe.py  tests_unsubscribe.py
